reselience4j pur user auth

--- a/config/application.properties
+++ b/config/application.properties
@@ -10,3 +10,27 @@ eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka
 application-description=Khedmti application
 application-license=API Licence
 application-version=1.0
+# --- CONFIGURATION RESILIENCE4J ---
+
+# 1. Configuration du Circuit Breaker (Disjoncteur)
+# 'userService' est le nom utilisé dans l'annotation @CircuitBreaker(name = "userService")
+resilience4j.circuitbreaker.instances.userService.registerHealthIndicator=true
+# Nombre d'appels à analyser pour décider d'ouvrir le circuit
+resilience4j.circuitbreaker.instances.userService.slidingWindowSize=10
+# Seuil d'échec (50% d'erreurs = on coupe)
+resilience4j.circuitbreaker.instances.userService.failureRateThreshold=50
+# Temps d'attente avant de tenter de se reconnecter (10 secondes)
+resilience4j.circuitbreaker.instances.userService.waitDurationInOpenState=10s
+# Nombre d'appels tests autorisés quand le circuit tente de se refermer
+resilience4j.circuitbreaker.instances.userService.permittedNumberOfCallsInHalfOpenState=3
+
+# 2. Configuration du Retry (Tentatives automatiques)
+# 'userService' est le nom utilisé dans l'annotation @Retry(name = "userService")
+resilience4j.retry.instances.userService.maxAttempts=3
+# Temps d'attente entre deux tentatives (2 secondes)
+resilience4j.retry.instances.userService.waitDuration=2s
+# Indispensable pour que Feign trouve le vrai port aléatoire
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.prefer-ip-address=true
+# Force la mise à jour immédiate du port vers Eureka
+eureka.instance.non-secure-port-enabled=true
