--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,7 +1,18 @@
-server.port=0
+server.port=8082
 
 application-title=Auth Service
 
 spring.application.name=auth-service
 
 spring.config.import=configserver:http://localhost:8888/
+eureka.client.healthcheck.enabled=true
+# 1. Fixer le problème du port 0 dans Eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+
+# 2. Obliger Eureka à récupérer le vrai port dynamique
+eureka.instance.non-secure-port-enabled=true
+
+# 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
+management.endpoints.web.exposure.include=health,info,resilience4j
+management.endpoint.health.show-details=always
