resilience job service

--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.topic.name=notificationTopic
 
 spring.config.import=configserver:http://localhost:8888/
+# Configuration pour File Storage
+resilience4j.circuitbreaker.instances.fileStorage.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.fileStorage.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.fileStorage.waitDurationInOpenState=15s
+
+# On peut aussi ajouter un Retry car l'upload de fichier peut échouer à cause du réseau
+resilience4j.retry.instances.fileStorage.maxAttempts=2
+resilience4j.retry.instances.fileStorage.waitDuration=1s
