--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,5 +2,9 @@ spring.application.name=config-server
 server.port=8888
 
 spring.profiles.active=git
-spring.cloud.config.server.git.uri=https://github.com/devsyx/spring-boot-microservices
+spring.cloud.config.server.git.uri=https://github.com/mohamedamine585/khedmti
 spring.cloud.config.server.git.search-paths=config
+
+
+spring.cloud.config.server.git.username=${GIT_USERNAME}
+spring.cloud.config.server.git.password=${GIT_TOKEN}
