--- a/config/application.properties
+++ b/config/application.properties
@@ -10,3 +10,20 @@ eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka
 application-description=Khedmti application
 application-license=API Licence
 application-version=1.0
+
+
+
+
+# -------------------
+# Actuator exposure
+# -------------------
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+
+# -------------------
+# Micrometer
+# -------------------
+management.metrics.tags.application=${spring.application.name}
+
+# Enable LoadBalancer metrics
+spring.cloud.loadbalancer.metrics.enabled=true
