--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -14,5 +14,13 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.non-secure-port-enabled=true
 
 # 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
-management.endpoints.web.exposure.include=health,info,resilience4j
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+# --- CONFIGURATION RATE LIMITER ---
+
+# Nombre d'appels autorisés pendant la période
+resilience4j.ratelimiter.instances.loginLimiter.limitForPeriod=3
+# Durée de la période (10 secondes)
+resilience4j.ratelimiter.instances.loginLimiter.limitRefreshPeriod=10s
+# Temps d'attente maximum pour obtenir une place si on est au-dessus de la limite (0 = rejet immédiat)
+resilience4j.ratelimiter.instances.loginLimiter.timeoutDuration=0
