--- a/file-storage/src/main/resources/application.properties
+++ b/file-storage/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.servlet.multipart.max-request-size=5MB
 spring.application.name=file-storage
 
 spring.config.import=configserver:http://localhost:8888/
+management.endpoints.web.exposure.include=*
