--- a/job-service/pom.xml
+++ b/job-service/pom.xml
@@ -22,6 +22,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!-- Surveillance et Statistiques -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
         <!-- Resilience4j pour Spring Boot 2 -->
         <dependency>
             <groupId>io.github.resilience4j</groupId>
