--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=0
+server.port=8083
 
 application-title=Job Service
 
@@ -18,3 +18,7 @@ resilience4j.circuitbreaker.instances.fileStorage.waitDurationInOpenState=15s
 # On peut aussi ajouter un Retry car l'upload de fichier peut échouer à cause du réseau
 resilience4j.retry.instances.fileStorage.maxAttempts=2
 resilience4j.retry.instances.fileStorage.waitDuration=1s
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+eureka.instance.non-secure-port-enabled=true
+management.endpoints.web.exposure.include=*
