--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -14,5 +14,5 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.non-secure-port-enabled=true
 
 # 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
-management.endpoints.web.exposure.include=health,info,resilience4j
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
