--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -3,8 +3,10 @@ server.port=8081
 spring.application.name=user-service
 
 application-title=User Service
+application-description=User Service API for managing users with Axon Framework CQRS/Event Sourcing
+application-version=1.0.0
+application-license=MIT
 
-spring.config.import=configserver:http://localhost:8888/
 eureka.client.healthcheck.enabled=true
 # 1. Fixer le problème du port 0 dans Eureka
 eureka.instance.instance-id=${spring.application.name}:${random.value}
@@ -16,3 +18,18 @@ eureka.instance.non-secure-port-enabled=true
 # 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# Axon Server Configuration
+axon.axonserver.servers=localhost:8124
+axon.serializer.general=jackson
+axon.serializer.events=jackson
+axon.serializer.messages=jackson
+
+# Keep JPA for read model (projections)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/microservice
+spring.datasource.username=postgres
+spring.datasource.password=55
