fix login rate limiter

--- a/config/application.properties
+++ b/config/application.properties
@@ -29,3 +29,6 @@ resilience4j.retry.instances.userService.maxAttempts=3
 # Temps d'attente entre deux tentatives (2 secondes)
 resilience4j.retry.instances.userService.waitDuration=2s
 
+resilience4j.ratelimiter.instances.loginLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.loginLimiter.limitRefreshPeriod=10s
+resilience4j.ratelimiter.instances.loginLimiter.timeoutDuration=0
