--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -35,4 +35,4 @@ spring.datasource.username=postgres
 spring.datasource.password=55
 
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=http://localhost:8888/
