--- a/config/application.properties
+++ b/config/application.properties
@@ -4,7 +4,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/microservice
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:55}
 
-eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+# 1. Fixer le problème du port 0 dans Eureka
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+# 2. Obliger Eureka à récupérer le vrai port dynamique
+eureka.instance.non-secure-port-enabled=true
 
 application-description=Khedmti application
 application-license=API Licence
@@ -32,3 +36,14 @@ resilience4j.retry.instances.userService.waitDuration=2s
 resilience4j.ratelimiter.instances.loginLimiter.limitForPeriod=5
 resilience4j.ratelimiter.instances.loginLimiter.limitRefreshPeriod=10s
 resilience4j.ratelimiter.instances.loginLimiter.timeoutDuration=0
+
+
+# for user service
+# Axon Server Configuration
+axon.axonserver.servers=localhost:8124
+axon.serializer.general=jackson
+axon.serializer.events=jackson
+axon.serializer.messages=jackson
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
