fix login rate limiter

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8081
 
 spring.application.name=user-service
+spring.config.import=http://localhost:8888/
 
-application-title=User Service
+application-title=user_service
+eureka.client.healthcheck.enabled=true
 
-spring.config.import=configserver:http://localhost:8888/
+
