feat: Add Prometheus monitoring and actuator support to microservices
- Added Spring Boot Actuator and Micrometer Prometheus dependencies to eureka-server, file-storage, gateway, auth-service, user-service, job-service, and notification-service.
- Configured management endpoints exposure and health details in application properties for all services.
- Updated Eureka client configurations to use service URLs pointing to the Eureka server.
- Created Dockerfiles for each microservice to enable containerization.
- Added Grafana provisioning files for dashboards and data sources.
- Initialized Axon database schema with SQL scripts for token, event, and saga storage.
- Implemented CI/CD pipeline in GitHub Actions for building, testing, and deploying microservices.

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -4,7 +4,10 @@ application-title=Auth Service
 
 spring.application.name=auth-service
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://config-server:8888/
+
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
 
 # 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
