--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 server.port=8081
 
 spring.application.name=user-service
-spring.config.import=http://localhost:8888/
+spring.config.import=optional:configserver:http://config-server:8888/
 
 application-title=user_service
+application-description=User Service API - Manages user profiles and authentication
+application-version=1.0.0
+application-license=MIT
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.client.healthcheck.enabled=true
+eureka.instance.prefer-ip-address=true
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 
+# Axon Server Configuration - Disabled to prevent connection attempts
+axon.axonserver.enabled=false
