--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.profiles.active=git
-spring.cloud.config.server.git.uri=https://github.com/mohamedamine585/khedmti
-spring.cloud.config.server.git.search-paths=config
+spring.profiles.active=native
+spring.cloud.config.server.native.search-locations=file:///app/config
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
