--- a/file-storage/src/main/resources/application.properties
+++ b/file-storage/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.application.name=file-storage
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://config-server:8888/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.prefer-ip-address=true
 management.endpoints.web.exposure.include=*
