--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -4,12 +4,13 @@ application-title=Job Service
 
 spring.application.name=job-service
 
-spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.topic.name=notificationTopic
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://config-server:8888/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 # Configuration pour File Storage
 resilience4j.circuitbreaker.instances.fileStorage.slidingWindowSize=5
 resilience4j.circuitbreaker.instances.fileStorage.failureRateThreshold=50
