--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=0
 
 spring.application.name=notification-service
 
-spring.kafka.consumer.bootstrap-servers= localhost:9092
+spring.kafka.consumer.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id= notification
 spring.kafka.consumer.auto-offset-reset= earliest
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
@@ -10,4 +10,6 @@ spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.seri
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.topic.name==notificationTopic
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://config-server:8888/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
+eureka.instance.prefer-ip-address=true
