--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,11 +1,22 @@
 global:
   scrape_interval: 5s
+  evaluation_interval: 5s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
   - job_name: 'khedmti-microservices'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: 
-          - 'host.docker.internal:8081'
-          - 'host.docker.internal:8082'
-          - 'host.docker.internal:8083'
+          - 'user-service:8081'
+          - 'auth-service:8082'
+          - 'job-service:8083'
+          - 'file-storage:8901'
+          - 'gateway:8080'
+          - 'config-server:8888'
+          - 'eureka-server:8761'
+        labels:
+          application: 'khedmti'
