Fix mvnw permission issue in CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      - name: Make mvnw executable
+        working-directory: ./${{ matrix.service }}
+        run: chmod +x ./mvnw
+
       - name: Build ${{ matrix.service }}
         working-directory: ./${{ matrix.service }}
         run: ./mvnw clean compile -DskipTests
