fix: fixed config files for the user service

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ application-title=Auth Service
 
 spring.application.name=auth-service
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}/
 
 
 # 3. Activer l'exposition des points de contrôle (nécessaire pour le healthcheck)
@@ -13,7 +13,7 @@ management.endpoint.health.show-details=always
 # --- CONFIGURATION RATE LIMITER ---
 
 # Nombre d'appels autorisés pendant la période
-resilience4j.ratelimiter.instances.loginLimiter.limitForPeriod=3
+resilience4j.ratelimiter.instances.loginLimiter.limitForPeriod=10
 # Durée de la période (10 secondes)
 resilience4j.ratelimiter.instances.loginLimiter.limitRefreshPeriod=10s
 # Temps d'attente maximum pour obtenir une place si on est au-dessus de la limite (0 = rejet immédiat)
