--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=config-server
 server.port=8888
 
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+
 spring.profiles.active=git
 spring.cloud.config.server.git.uri=https://github.com/mohamedamine585/khedmti
 spring.cloud.config.server.git.search-paths=config
