--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,9 +1,35 @@
 server.port=8081
 
 spring.application.name=user-service
-spring.config.import=http://localhost:8888/
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}/
 
-application-title=user_service
+# Database configuration (fallback if config server is not available)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:microservice}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:55}
+
+# Eureka configuration
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+eureka.instance.prefer-ip-address=true
+eureka.instance.non-secure-port-enabled=true
 eureka.client.healthcheck.enabled=true
+
+# Axon Server Configuration (fallback if config server is not available)
+axon.axonserver.servers=${AXON_SERVER_HOST:localhost}:${AXON_SERVER_PORT:8124}
+axon.serializer.general=jackson
+axon.serializer.events=jackson
+axon.serializer.messages=jackson
+
+# Management endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Application metadata for OpenAPI/Swagger
+application-title=User Service
+application-description=User Service API for managing user profiles and authentication
+application-version=1.0
+application-license=API Licence
 
 
