--- a/config/application.properties
+++ b/config/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/microservice
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:microservice}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:55}
 
@@ -40,7 +40,7 @@ resilience4j.ratelimiter.instances.loginLimiter.timeoutDuration=0
 
 # for user service
 # Axon Server Configuration
-axon.axonserver.servers=localhost:8124
+axon.axonserver.servers=${AXON_SERVER_HOST:localhost}:${AXON_SERVER_PORT:8124}
 axon.serializer.general=jackson
 axon.serializer.events=jackson
 axon.serializer.messages=jackson
