--- a/file-storage/src/main/resources/application.properties
+++ b/file-storage/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.application.name=file-storage
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}/
 management.endpoints.web.exposure.include=*
