--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -4,12 +4,12 @@ application-title=Job Service
 
 spring.application.name=job-service
 
-spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.topic.name=notificationTopic
 
-spring.config.import=configserver:http://localhost:8888/
+spring.config.import=optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8888}/
 # Configuration pour File Storage
 resilience4j.circuitbreaker.instances.fileStorage.slidingWindowSize=5
 resilience4j.circuitbreaker.instances.fileStorage.failureRateThreshold=50
